<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_login"
            style="@style/CommonEditTextStyle"
            android:layout_marginTop="@dimen/spacing_10"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/et_password"
            style="@style/CommonEditTextStyle"
            android:layout_marginTop="@dimen/spacing_20"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"/>

        <Button
            android:id="@+id/btn_login"
            style="@style/CommonButtonStyle"
            android:layout_width="match_parent"
            android:background="@color/blue"
            android:text="@string/Login"
            android:textSize="@dimen/spacing_16"/>
    </LinearLayout>


</RelativeLayout>